--- a/Notebooks-Master/04_Build_Models.ipynb
+++ b/Notebooks-Master/04_Build_Models.ipynb
@@ -140,7 +140,7 @@
     "lr.fit(X_train_ss, y_train)\n",
     "lr.score(X_train_ss, y_train), lr.score(X_test_ss, y_test)\n",
     "\n",
-    "get_metrics(lr.predict(X_test_ss), y_test)"
+    "get_metrics(y_test, lr.predict(X_test_ss))"
    ]
   },
   {
